--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: My Territory
+title: Shobhit Puri
 description: "Online Territory of Shobhit Puri"  # used in site head
 
 # register on google analytics and replace this token
