Removed Facebook and reordered footer

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ disqus_id: shobhitpuri
 
 # footer details. Deleting the value would remove it from footer.
 github_username:  shobhitpuri
-facebook_username:  puri.shobhit
+###facebook_username:  puri.shobhit
 email: shobhit.iiita@gmail.com
 stackoverflow_username: 1306419/shobhit-puri
 twitter_username : shobhit_puri
