--- a/_config.yml
+++ b/_config.yml
@@ -37,4 +37,4 @@ paginate: 5
 paginate_path: blog/page:num
 
 # gem dependencies
-gems: [jekyll-paginate, jekyll-feed, jekyll-gist]
+gems: [jekyll-paginate, jekyll-feed, jekyll-gist, jemoji]
