Updated links and contact

--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,10 @@ disqus_id: shobhitpuri
 # footer details. Deleting the value would remove it from footer.
 github_username:  shobhitpuri
 ###facebook_username:  puri.shobhit
-email: shobhit@puritechnologies.com
+contact: https://calendly.com/shobhitpuri/30min
 stackoverflow_username: 1306419/shobhit-puri
 twitter_username : shobhit_puri
+linkedin_username: shobhitpuri
 copyright_name: Shobhit Puri
 
 # used for portfolio on home page
